2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nntp.el: Use with-current-buffer.
	(nntp-send-buffer): Just set the buffer to unibyte rather than use the
	dubious mm-with-unibyte-current-buffer.
	(nntp-with-open-group-function): New function extracted from
	nntp-with-open-group macro.
	(nntp-with-open-group): Use the function, so it's easier to debug.
	Add indentation and debugging info.
	(nntp-open-telnet-stream, nntp-open-via-rlogin-and-telnet): Recommend the
	use of the netcat alternatives.

	* rfc2047.el (rfc2047-decode-string): Don't use `m'.
	Avoid mm-string-as-multibyte as well.

	* nnweb.el (nnweb-insert-html):
	Remove use of nnheader-string-as-multibyte.

	* nnheader.el (nnheader-init-server-buffer): Use with-current-buffer.
	(nnheader-string-as-multibyte): Remove.

	* mm-view.el: Use inhibit-read-only.
	(mm-inline-text-html-render-with-w3, mm-inline-message): Use dolist.
	(mm-pkcs7-signed-magic, mm-pkcs7-enveloped-magic): Use just string
	or unibyte-string.

	* mm-uu.el (mm-uu-copy-to-buffer): Preserve (uni/multi)byteness.
	(mm-uu-yenc-extract): Use with-current-buffer.

	* gnus-soup.el (gnus-soup-send-packet): Don't use
	mm-with-unibyte-current-buffer since the buffer is unibyte anyway.

	* nnmh.el: Use with-current-buffer.
	(nnmh-request-list-1): Use mm-string-to-multibyte rather than
	mm-string-as-multibyte on the output of mm-encode-coding-string.

	* nnimap.el (nnimap-retrieve-headers-progress): Use a unibyte buffer.
	(nnimap-request-move-article): Use with-current-buffer.

	* mm-decode.el (mm-with-part): Set the buffer to unibyte before
	inserting the handle-buffer's text, so the implicit multibyte->unibyte
	conversion uses string-make-unibyte rather than string-as-unibyte.

	* gnus-msg.el: Use with-current-buffer.

	* message.el (message-ignored-resent-headers): Add "Delivered-To".

2008-03-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* mail-source.el (mail-source-delete-old-incoming-confirm):
	Change default to nil.